<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Home">


    <android.widget.Button
        android:id="@+id/instructionsBtn"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:fontFamily="@font/destroy"
        android:onClick="Instructions"
        android:text="@string/Instructions"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <android.widget.Button
        android:id="@+id/diffiLevelBtn"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:fontFamily="@font/destroy"
        android:text="@string/diffiLevels"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/button3"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:fontFamily="@font/destroy"
        android:text="@string/table"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:fontFamily="@font/destroy"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <ImageButton
        android:id="@+id/speakerBtn"
        android:layout_width="51dp"
        android:layout_height="48dp"
        android:background="@null"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:fontFamily="@font/destroy"
        android:text="@string/passnickname"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />


</androidx.constraintlayout.widget.ConstraintLayout>