<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/headline"
        android:layout_width="308dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/destroy"
        android:text="Game Over"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:id="@+id/scoreResultTextView"
        android:layout_width="279dp"
        android:layout_height="73dp"
        android:fontFamily="@font/destroy"
        android:text="@string/yourScore"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        app:layout_constraintVertical_bias="0.142" />

    <android.widget.Button
        android:id="@+id/reset"
        android:layout_width="165dp"
        android:layout_height="54dp"
        android:layout_marginTop="76dp"
        android:onClick="rest"
        android:text="@string/tryAgain"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/destroy"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreResultTextView"
        app:layout_constraintVertical_bias="0.074" />

    <android.widget.Button
        android:id="@+id/Back"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:onClick="end"
        android:text="@string/EndGame"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:fontFamily="@font/destroy"
        android:background="@drawable/shape_button"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreResultTextView"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/scoreResult"
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:fontFamily="@font/destroy"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="142dp"
        android:layout_height="42dp"
        android:fontFamily="@font/destroy"
        android:text="@string/PASSNICKNAME"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>